--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,14 @@
 nav {
   display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
   height: 60px;
   background-color: #000000;
+}
+
+nav > div:last-child {
+  margin-left: auto;
 }
 
 div {
