change div CSS to nav > div to make future CSS non conflicting

--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,13 @@ nav {
   background-color: #000000;
 }
 
-nav > div:last-child {
-  margin-left: auto;
-}
-
-div {
+nav > div {
   font-size: 20px;
   font-weight: bold;
   margin: 10px;
   color: #ffffff;
+}
+
+nav > div:last-child {
+  margin-left: auto;
 }
