--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ nav {
   align-items: center;
   justify-content: flex-start;
   height: 60px;
-  background-color: #000000;
+  background-color: #0e4ba0;
 }
 
 nav > div {
